--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
     <div id="intro" class="section">
       <div class="hidden">
         <h1>Conor Dorgan</h1>
-        <p>Welcome to my Portfolio</p>
-        <p>Scroll down to see my projects.</p>
+        <h4>Skills</h4>
+            <p>HTML, CSS, JavaScript, React, React Native ,Java, Python, C#, SQL, Windows, Microsoft Office, </p>
+           
       </div>
     </div>
     <div id="projects" class="section">
