--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         <h1>Conor Dorgan</h1>
         <h4>Skills</h4>
             <p>HTML, CSS, JavaScript, React, React Native ,Java, Python, C#, SQL, Windows, Microsoft Office, </p>
-           
+       
       </div>
     </div>
     <div id="projects" class="section">
       <div class="hidden">
         <h2>My Projects</h2>
         <ul>
-          <li>Project 1</li>
+          <li>Online E-Commerce Website Utilizing Java Servlets and JavaScript</li>
           <li>Project 2</li>
           <li>Project 3</li>
         </ul>
